Fixing up order-m-l models.

--- a/gaj-data-analysis/research/MarkovModels/markov-model-notes.tex
+++ b/gaj-data-analysis/research/MarkovModels/markov-model-notes.tex
@@ -180,6 +180,13 @@ p(\ui,\vr,\ut)
 & = & p(\ui,\tm_1,r_1,\ldots,\tm_n,r_n,\ut)\,.
 \label{eq:pr:gen}
 \end{eqnarray}
+Note that, formally, this is equivalent to redefining the sequence
+as $\vr=(\tm_1,r_1,\tm_2,r_2,\ldots,\tm_n,r_n)$.
+Informally, we take the specification of a non-empty vector $\vr$ of contiguous values to automatically imply the existence of non-terminating
+transitions between stages. Thus, by convention, the $\tm_t$ terms are kept implicit when dealing with functions of $\vr$
+(e.g.\ the left-hand side of the above equation),
+and are only made explicit when dealing directly with functions of the expanded values $r_1, r_2, \ldots, r_n$
+(e.g.\ the right-hand side of the above equation).
 
 \subsection{Missing Values}\label{sec:missing-values}
 
@@ -212,9 +219,9 @@ In general, if the domain ${\cal R}$  is discrete, then the likelihood of an obs
 p(\ui,\uvr,\ut) 
 & = & 
 \sum_{\iota_0=0}^{1}\delta(\iota_0\!=\!\ui)
-\,\sum_{\tau_{n+1}=0}^{1}\delta(\tau_{n+1}\!=\!\ut)
 \sum_{r_1\in{\cal R}} \delta(r_1\!=\!\ur_1)
 \cdots\sum_{r_n\in{\cal R}} \delta(r_n\!=\!\ur_n)
+\sum_{\tau_{n+1}=0}^{1}\delta(\tau_{n+1}\!=\!\ut)
 \nonumber\\
 && \hspace*{5mm}
 p(\iota_0,\tm_1,r_1,\ldots,\tm_n,r_n,\tau_{n+1})\,.
@@ -409,8 +416,8 @@ p(r_n\,|\,\iota_0,\ldots,\tm_{n})
 \nonumber\\
 & = &
 p(\iota_0)
-\left\{\prod_{t=1}^{n}p(\tm_t,r_t\,|\,\iota_0,\vec{\tau}^-_{1,t-1},\vr_{1,t-1})\right\}
- p(\tau_{n+1}\,|\,\iota_0,\vec{\tau}^-_{1,n},\vr_{1,n})
+\left\{\prod_{t=1}^{n}p(\tm_t,r_t\,|\,\iota_0,\vr_{1,t-1})\right\}
+ p(\tau_{n+1}\,|\,\iota_0,\vr_{1,n})
 \,.
 \label{eq:temporal-model-full}
 \end{eqnarray}
@@ -460,12 +467,12 @@ shown in Figure~\ref{fig:markov-m}.
 \end{figure}
 The corresponding likelihood model is given by
 \begin{eqnarray}
-p(\iota_0,\vr,\tau_{n+1}) & = &
+\hspace*{-5mm}
+p(\iota_0,\vr,\tau_{n+1}) & \!\!=\!\! &
 p(\iota_0)
-\left\{\prod_{t=1}^{m}p(\tm_t,r_t\,|\,\iota_0,\vec{\tau}^-_{1,t-1},\vr_{1,t-1})\right\}
-\nonumber\\&&
-\left\{\prod_{t=m+1}^{n}p(\tm_t,r_t\,|\,\vec{\tau}^-_{t-m,t-1},\vr_{t-m,t-1})\right\}
-p(\tau_{n+1}\,|\,\vec{\tau}^-_{n-m+1,n},\vr_{n-m+1,n})\,,
+\left\{\prod_{t=1}^{m}p(\tm_t,r_t\,|\,\iota_0,\vr_{1,t-1})\right\}
+\left\{\prod_{t=m+1}^{n}p(\tm_t,r_t\,|\,\vr_{t-m,t-1})\right\}
+p(\tau_{n+1}\,|\,\vr_{n-m+1,n})\,,
 \label{eq:mth-order}
 \end{eqnarray}
 for $n\ge m$.
@@ -531,25 +538,6 @@ can now be refined under the restriction of the causal sequence process to an $m
 Specifically, for any stage $1\le t\le n$, we take the limiting historical stage to be $s=\max(1, t-m+1)$.
 Then, for a sufficiently long sequence (i.e.\ $n\ge m$), the forward factor~\eqref{eq:fwd-pass-basic} may be
 computed for stages $t=m,m+1,\ldots,n$ via
-%\begin{eqnarray}
-%\alpha_t(\vr_{1,t}) & = & p(\iota_0,\tm_1,r_1,\ldots,\tm_t,r_t)
-%~=~
-%p(\iota_0)\,\prod_{i=1}^{t}p(\tm_i,r_i\,|\,\iota_0,\vec{\tau}^-_{1,i-1},\vr_{1,i-1})\,.
-%\label{eq:fwd-pass-m-init}
-%\end{eqnarray}
-%Furthermore, if $t<m-1$ then at stage $t+1$ we have
-%\begin{eqnarray}
-%\alpha_{t+1}(\vr_{1,t+1}) & = & p(\iota_0,\tm_1,r_1,\ldots,\tm_{t+1},r_{t+1})
-%~=~
-%p(\iota_0)\,\prod_{i=1}^{t+1}p(\tm_i,r_i\,|\,\iota_0,\vec{\tau}^-_{1,i-1},\vr_{1,i-1})
-%\nonumber\\& = &
-%\alpha_t(\vr_{1,t})\,p(\tm_{t+1},r_{t+1}\,|\,\iota_0,\vec{\tau}^-_{1,t},\vr_{1,t})\,.
-%\end{eqnarray}
-%Note that for $m>1$ the forward pass commences from
-%\begin{eqnarray}
-%\alpha_1(r_1) & = &  p(\iota_0)\,p(\tm_1,r_1\,|\,\iota_0)\,.
-%\end{eqnarray}
-%However, if the sequence is sufficiently long, then for later stages $t\ge m$ we obtain
 \begin{eqnarray}
 \hspace*{-5mm}
 \alpha_t(\vr_{t-m+1,t}) & = & p(\ui,\tm_1,\ur_1,\ldots,\tm_{t-m},\ur_{t-m},\tm_{t-m+1},r_{t-m+1},\ldots,\tm_t,r_t)
@@ -559,8 +547,8 @@ computed for stages $t=m,m+1,\ldots,n$ via
 \cdots
 \sum_{r_{t-m}\in{\cal R}} \delta(r_{t-m}\!=\!\ur_{t-m})
 \nonumber\\&&
-p(\iota_0)\left\{\prod_{i=1}^{m}p(\tm_i,r_i\,|\,\iota_0,\vec{\tau}^-_{1,i-1},\vr_{1,i-1})\right\}
-\left\{\prod_{i=m+1}^{t}p(\tm_i,r_i\,|\,\vec{\tau}^-_{i-m,i-1},\vr_{i-m,i-1})\right\}\,,
+p(\iota_0)\left\{\prod_{i=1}^{m}p(\tm_i,r_i\,|\,\iota_0,\vr_{1,i-1})\right\}
+\left\{\prod_{i=m+1}^{t}p(\tm_i,r_i\,|\,\vr_{i-m,i-1})\right\}\,,
 \label{eq:fwd-pass-m}
 \end{eqnarray}
 from equation~\eqref{eq:mth-order}. 
@@ -575,16 +563,24 @@ p(\ui,\tm_1,\ur_1,\ldots,\tm_{t-m+1},\ur_{t-m+1},\tm_{t-m+2},r_{t-m+2},\ldots,\t
 \cdots
 \sum_{r_{t-m+1}\in{\cal R}} \delta(r_{t-m+1}\!=\!\ur_{t-m+1})
 \nonumber\\&&
-p(\iota_0)\left\{\prod_{i=1}^{m}p(\tm_i,r_i\,|\,\iota_0,\vec{\tau}^-_{1,i-1},\vr_{1,i-1})\right\}
-\left\{\prod_{i=m+1}^{t+1}p(\tm_i,r_i\,|\,\vec{\tau}^-_{i-m,i-1},\vr_{i-m,i-1})\right\}
+p(\iota_0)\left\{\prod_{i=1}^{m}p(\tm_i,r_i\,|\,\iota_0,\vr_{1,i-1})\right\}
+\left\{\prod_{i=m+1}^{t+1}p(\tm_i,r_i\,|\,\vr_{i-m,i-1})\right\}
 \nonumber\\& = &\!\!\!
 \sum_{r_{t-m+1}\in{\cal R}} \delta(r_{t-m+1}\!=\!\ur_{t-m+1})\,\alpha_t(\vr_{t-m+1,t})
-\,p(\tm_{t+1},r_{t+1}\,|\,\vec{\tau}^-_{t-m+1,t},\vr_{t-m+1,t})\,.
+\,p(\tm_{t+1},r_{t+1}\,|\,\vr_{t-m+1,t})\,.
 \label{eq:fwd-pass-m-recursive}
 \end{eqnarray}
 Effectively, this recursive relation comes from moving the size-$m$ active window from stage $t$ to stage $t+1$ and thereby marginalising over the
 observation $\ur_{t-m+1}$ that has now left the window.
-Note that for the special case of $m=1$, this forward pass reduces to
+The forward pass commences from stage $m$ (the last stage that still depends directly on $\iota_0$) by first computing the factor
+\begin{eqnarray}
+\alpha_m(\vr_{1,m}) & = & p(\ui,\tm_1,r_1,\ldots,\tm_m,r_m)
+~=~
+\sum_{\iota_0=0}^{1}\delta(\iota_0\!=\!\ui)\,
+p(\iota_0)\prod_{i=1}^{m}p(\tm_i,r_i\,|\,\iota_0,\vr_{1,i-1})\,.
+\label{eq:fwd-pass-m0}
+\end{eqnarray}
+Observe that for the special case of $m=1$, the entire forward pass reduces to
 \begin{eqnarray}
 \alpha_1(r_1) & = &  \sum_{\iota_0=0}^{1}\delta(\iota_0\!=\!\ui)\,
 p(\iota_0)\,p(\tm_1,r_1\,|\,\iota_0)\,,
@@ -603,12 +599,12 @@ p(\tm_{t+1},\ur_{t+1},\ldots,\tm_n,\ur_n,\ut\,|\,\tm_{t-m+1},r_{t-m+1},\ldots,\t
 \nonumber\\& = &
 \sum_{r_{t+1}\in{\cal R}} \delta(r_{t+1}\!=\!\ur_{t+1})\,\cdots
 \sum_{r_{n}\in{\cal R}} \delta(r_{n}\!=\!\ur_{n})\,
-\sum_{\tau_{n+1}=0}^{1}\delta(\tau_{n+1}\!=\!\ut_{n+1})
+\sum_{\tau_{n+1}=0}^{1}\delta(\tau_{n+1}\!=\!\ut)
 \nonumber\\
 &&{}
 \left\{\prod_{i=t+1}^n
-p(\tm_{i},r_{i}\,|\,\vec{\tau}^-_{i-m,i-1},\vr_{i-m,i-1})\right\}
-p(\tau_{n+1}\,|\,\vec{\tau}^-_{n-m+1,n},\vr_{n-m+1,n})
+p(\tm_{i},r_{i}\,|\,\vr_{i-m,i-1})\right\}
+p(\tau_{n+1}\,|\,\vr_{n-m+1,n})
 \,.
 \end{eqnarray}
 Likewise, if $m<t\le n$ then we may move the window backwards from stage $t$ to stage $t-1$, thereby obtaining the recursive relation
@@ -618,20 +614,34 @@ p(\tm_{t},\ur_{t},\ldots,\tm_n,\ur_n,\ut\,|\,\tm_{t-m},r_{t-m},\ldots,\tm_{t-1},
 \nonumber\\& = &
 \sum_{r_{t}\in{\cal R}} \delta(r_{t}\!=\!\ur_{t})\,\cdots
 \sum_{r_{n}\in{\cal R}} \delta(r_{n}\!=\!\ur_{n})\,
-\sum_{\tau_{n+1}=0}^{1}\delta(\tau_{n+1}\!=\!\ut_{n+1})
+\sum_{\tau_{n+1}=0}^{1}\delta(\tau_{n+1}\!=\!\ut)
 \nonumber\\
 &&{}
 \left\{\prod_{i=t}^n
-p(\tm_{i},r_{i}\,|\,\vec{\tau}^-_{i-m,i-1},\vr_{i-m,i-1})\right\}
-p(\tau_{n+1}\,|\,\vec{\tau}^-_{n-m+1,n},\vr_{n-m+1,n})
+p(\tm_{i},r_{i}\,|\,\vr_{i-m,i-1})\right\}
+p(\tau_{n+1}\,|\,\vr_{n-m+1,n})
 \nonumber\\& = &
 \sum_{r_{t}\in{\cal R}} \delta(r_{t}\!=\!\ur_{t})\,
-p(\tm_{t},r_{t}\,|\,\vec{\tau}^-_{t-m,t-1},\vr_{t-m,t-1})\,\beta_{t}(\vr_{t-m+1,t})
+p(\tm_{t},r_{t}\,|\,\vr_{t-m,t-1})\,\beta_{t}(\vr_{t-m+1,t})
 \,.
+\label{eq:bwd-recurse}
 \end{eqnarray}
 Effectively, moving the size-$m$ active window from stage $t$ to stage $t-1$ allows us to marginalise over the
 observation $\ur_{t}$ that has now left the window.
-For the special case of $m=1$, this backward pass reduces to
+The backward pass commences from stage $n$, such that stage $n-m+1$  (the last stage upon which
+$\tau_{n+1}$ directly depends) is the first stage in the sliding window. The inital backward factor is then computed as
+\begin{eqnarray}
+\hspace*{-5mm}
+\beta_n(\vr_{n-m+1,n}) & = & 
+p(\ut\,|\,\tm_{n-m+1},r_{n-m+1},\ldots,\tm_n,r_n)
+%\nonumber\\& = &
+~=
+\sum_{\tau_{n+1}=0}^{1}\delta(\tau_{n+1}\!=\!\ut)\,
+p(\tau_{n+1}\,|\,\vr_{n-m+1,n})
+\label{eq:bwd-m0}
+\,.
+\end{eqnarray}
+Observe for the special case of $m=1$ that the entire backward pass reduces to
 \begin{eqnarray}
 \beta_n(r_n) & = &  \sum_{\tau_{n+1}=0}^{1}\delta(\tau_{n+1}\!=\!\ut)\,
 p(\tau_{n+1}\,|\,\tm_n,r_n)\,,
@@ -644,7 +654,9 @@ p(\tm_{t+1},r_{t+1}\,|\,\tm_{t},r_{t})
 \end{eqnarray}
 Note that for a short sequence of length $n<m$ we must evaluate the observation likelihood~\eqref{eq:pr:discrete} directly using
 equation~\eqref{eq:mth-order}. The forward--backward algorithm is of no help in such a case, since the active window overlaps
-both ends of the sequence, namely $\ui$ and $\ut$, making the dependencies highly stage specific.
+both ends of the sequence, namely $\ui$ and $\ut$, making the dependencies highly stage specific. Likewise, even for $n\ge m$,
+all stages for $t<m$ must be computed indivudually without recourse to the forward factors, due to the changing number of
+dependencies on the start of the sequence.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Stateful Markov Sequence Processes}
@@ -652,7 +664,9 @@ Consider the fully-dependent causal process $R$ depicted in Figure~\ref{fig:caus
 Suppose now that the random variable $R_t$ at stage $t$ can be decomposed into the tuple
 $R_t=(S_t,X_t)$, where $S_t$ is a random {\em state} variable taking values $s_t\in{\cal S}$, and $X_t$
 is a random {\em value} variable taking values $x_t\in{\cal X}$.
-We make the common presumption that the stage transitions in the sequence generating process are entirely between states, e.g.\ from $S_{t-1}$ to $S_t$.
+Thus, we may define $\vr=((s_1,x_1),(s_2,x_2),\ldots,(s_n,x_n))$.
+
+We now make the common presumption that the stage transitions in the sequence generating process are entirely between states, e.g.\ from $S_{t-1}$ to $S_t$.
 It follows from causation that the value $x_t$ is generated after the state $s_t$ has been determined, i.e.\ $X_t$ depends upon $S_t$.
 Consequently, the fully-dependent  stateful sequence process, shown in Figure~\ref{fig:stateful-full}, is derived from Figure~\ref{fig:causal-process}
 by replacing each node $R_t$ by the pair of nodes $S_t$ and $X_t$ with a dependency from $S_t$ to $X_t$, such that every {\em afferent} dependency pointing to $R_t$ becomes two dependencies pointing to $S_t$ and $X_t$, and every {\em efferent} dependency pointing from $R_t$ becomes two dependencies pointing from $S_t$ and $X_t$, respectively.
@@ -755,8 +769,12 @@ by replacing each node $R_t$ by the pair of nodes $S_t$ and $X_t$ with a depende
 \caption{\em A fully-dependent, causal, stateful process for generating complete, random sequences of random length $N$, consisting of pairs of states and values.}
 \label{fig:stateful-full}
 \end{figure}
-For convenience, we may notionally separate the states from the corresponding values at each stage by loosely defining
-$\vr=(\vs,\vx)$.
+
+For convenience, we may notionally separate the states from the corresponding values at each stage by informally defining
+$\vs=(s_1,s_2,\ldots,s_n)$
+and 
+$\vx=(x_1,x_2,\ldots,x_n)$. More formally, since the non-terminating transitions are associated with the states,
+we might write $\vs=(\tm_1,s_1,\tm_2,s_2,\ldots,\tm_n,s_n)$.
 Hence, the joint likelihood of a fully-dependent state--value sequence is now derived from model~\eqref{eq:temporal-model-full} as
 \begin{eqnarray}
 p(\iota_0,\vs,\vx,\tau_{n+1}) & = &
@@ -764,9 +782,9 @@ p(\iota_0,\tm_1,s_1,x_1,\tm_2,s_2,x_2,\ldots,\tm_n,s_n,x_n,\tau_{n+1})
 \nonumber\\
 & = &
 p(\iota_0)
-\left\{\prod_{t=1}^{n}p(\tm_t,s_t\,|\,\iota_0,\vec{\tau}^-_{1,t-1},\vs_{1,t-1},\vx_{1,t-1})\,p(x_t\,|\,\iota_0,\vec{\tau}^-_{1,t-1},\vs_{1,t},\vx_{1,t-1})\right\}
+\left\{\prod_{t=1}^{n}p(\tm_t,s_t\,|\,\iota_0,\vs_{1,t-1},\vx_{1,t-1})\,p(x_t\,|\,\iota_0,\vs_{1,t},\vx_{1,t-1})\right\}
 \nonumber\\&&{}\times
- p(\tau_{n+1}\,|\,\iota_0,\vec{\tau}^-_{1,n},\vs_{1,n},\vx_{1,n})
+ p(\tau_{n+1}\,|\,\iota_0,\vs_{1,n},\vx_{1,n})
 \,.
 \label{eq:stateful-model-full}
 \end{eqnarray}
@@ -854,9 +872,8 @@ p(\iota_0,\vs,\vx,\tau_{n+1}) & = &
 %\nonumber\\
 %& = &
 p(\iota_0)
-\left\{\prod_{t=1}^{n}p(\tm_t,s_t\,|\,\iota_0,\vec{\tau}^-_{1,t-1},\vs_{1,t-1})\,p(x_t\,|\,\iota_0,\vec{\tau}^-_{1,t-1},\vs_{1,t})\right\}
-\nonumber\\&&{}\times
- p(\tau_{n+1}\,|\,\iota_0,\vec{\tau}^-_{1,n},\vs_{1,n})
+\left\{\prod_{t=1}^{n}p(\tm_t,s_t\,|\,\iota_0,\vs_{1,t-1})\,p(x_t\,|\,\iota_0,\vs_{1,t})\right\}
+\, p(\tau_{n+1}\,|\,\iota_0,\vs_{1,n})
 \,.
 \label{eq:stateful-model-sub}
 \end{eqnarray}
@@ -919,15 +936,15 @@ The corresponding likelihood model of this order-$(m,\ell)$ state--value sequenc
 \begin{eqnarray}
 p(\iota_0,\vs,\vx,\tau_{n+1}) & = &
 p(\iota_0)
-\left\{\prod_{t=1}^{m}p(\tm_t,s_t\,|\,\iota_0,\vec{\tau}^-_{1,t-1},\vs_{1,t-1})\right\}
-\left\{\prod_{t=1}^{\ell-1}p(x_t\,|\,\iota_0,\vec{\tau}^-_{1,t},\vs_{1,t})\right\}
+\left\{\prod_{t=1}^{m}p(\tm_t,s_t\,|\,\iota_0,\vs_{1,t-1})\right\}
+\left\{\prod_{t=1}^{\ell-1}p(x_t\,|\,\iota_0,\vs_{1,t})\right\}
 \nonumber\\&&
 \times
-\left\{\prod_{t=m+1}^{n}p(\tm_t,s_t\,|\,\vec{\tau}^-_{t-m,t-1},\vs_{t-m,t-1})\right\}
-\left\{\prod_{t=\ell}^{n}p(x_t\,|\,\vec{\tau}^-_{t-\ell+1,t},\vs_{t-\ell+1,t})\right\}
+\left\{\prod_{t=m+1}^{n}p(\tm_t,s_t\,|\,\vs_{t-m,t-1})\right\}
+\left\{\prod_{t=\ell}^{n}p(x_t\,|\,\vs_{t-\ell+1,t})\right\}
 \nonumber\\&&
 \times
-p(\tau_{n+1}\,|\,\vec{\tau}^-_{n-m+1,n},\vs_{n-m+1,n})\,,
+p(\tau_{n+1}\,|\,\vs_{n-m+1,n})\,,
 \label{eq:mth-ellth-order}
 \end{eqnarray}
 for $n\ge m$ and $n\ge\ell-1$. Note that adherence to the assumption of causality, and in particular the idea that
@@ -1014,40 +1031,38 @@ p(\ui,\uvs,\uvx,\ut)
 \nonumber\\&&
 \left[
 \sum_{\iota_0=0}^{1}\delta(\iota_0\!=\!\ui)
-\left\{
-p(\iota_0)\prod_{t=1}^{m}p(\tm_t,s_t\,|\,\iota_0,\vec{\tau}^-_{1,t-1},\vs_{1,t-1})
-\right\}\right.
-\nonumber\\&&\times
-\left.\left\{
-\prod_{t=1}^{\ell-1}
+\,p(\iota_0)\left\{\prod_{t=1}^{m}p(\tm_t,s_t\,|\,\iota_0,\vs_{1,t-1})
+\right\}
+%\right.\nonumber\\&&\times\left.
+\left\{\prod_{t=1}^{\ell-1}
 \sum_{x_t\in{\cal X}} \delta(x_t\!=\!\ux_t)\,
-p(x_t\,|\,\iota_0,\vec{\tau}^-_{1,t},\vs_{1,t})
+p(x_t\,|\,\iota_0,\vs_{1,t})
 \right\}\right]
 \nonumber\\&&\times
-\left\{\prod_{t=m+1}^{n}p(\tm_t,s_t\,|\,\vec{\tau}^-_{t-m,t-1},\vs_{t-m,t-1})\right\}
-\nonumber\\&&\times
+\left\{\prod_{t=m+1}^{n}p(\tm_t,s_t\,|\,\vs_{t-m,t-1})\right\}
+%\nonumber\\&&\times
 \left\{
 \prod_{t=\ell}^{n}
 \sum_{x_t\in{\cal X}} \delta(x_t\!=\!\ux_t)\,
-p(x_t\,|\,\vec{\tau}^-_{t-\ell+1,t},\vs_{t-\ell+1,t})
+p(x_t\,|\,\vs_{t-\ell+1,t})
 \right\}
 \nonumber\\&&\times
 \left\{
 \sum_{\tau_{n+1}=0}^{1}\delta(\tau_{n+1}\!=\!\ut)\,
-p(\tau_{n+1}\,|\,\vec{\tau}^-_{n-m+1,n},\vs_{n-m+1,n})
+p(\tau_{n+1}\,|\,\vs_{n-m+1,n})
 \right\}\,.
 \label{eq:partial-m-ell}
 \end{eqnarray}
 Suppose now that some value $x_t$ is unobserved, i.e.\ $\ux_t=*$. This is easily handled, since variable
 $X_t$  depends only on $S_t$ and possibly earlier stages. Specifically, the marginalisation over $x_t\in{\cal X}$ affects exactly one term in the model (as shown in the derivation  above). Consequently, we use the fact that
 \begin{eqnarray}
-p(\underline{x}_t\,|\,\iota_0,\vec{\tau}^-_{1,t},\vs_{1,t}) & = & 
+p(\underline{x}_t\,|\,\iota_0,\vs_{1,t}) & = & 
 \sum_{x_t\in{\cal X}} \delta(x_t\!=\!\ux_t)\,
-p(x_t\,|\,\iota_0,\vec{\tau}^-_{1,t},\vs_{1,t})\,,
+p(x_t\,|\,\iota_0,\vs_{1,t})\,,
 \\
-p(\underline{x}_t\,|\,\vec{\tau}^-_{t-\ell+1,t},\vs_{t-\ell+1,t}) & = &
+p(\underline{x}_t\,|\,\vs_{t-\ell+1,t}) & = &
 \sum_{x_t\in{\cal X}} \delta(x_t\!=\!\ux_t)\,
-p(x_t\,|\,\vec{\tau}^-_{t-\ell+1,t},\vs_{t-\ell+1,t})\,,
+p(x_t\,|\,\vs_{t-\ell+1,t})\,,
 \end{eqnarray}
 to deduce that
 $p(X_t\!=\!*\,|\,\ldots)=\sum_{x_t\in{\cal X}}p(x_t\,|\,\ldots)=1$, and so the marginalisation of each term
@@ -1057,47 +1072,42 @@ $X_t$ does not depend upon any earlier $X_{t-k}$; such higher-order dependencies
 Similarly, if the termination marker $\tau_{n+1}$ is unobserved, i.e.\ $\ut=*$, then 
 the termination probability 
 \begin{eqnarray}
-p(\ut\,|\,\vec{\tau}^-_{n-m+1,n},\vs_{n-m+1,n}) & = & 
+p(\ut\,|\,\vs_{n-m+1,n}) & = & 
 \sum_{\tau_{n+1}=0}^{1}\delta(\tau_{n+1}\!=\!\ut)\,
-p(\tau_{n+1}\,|\,\vec{\tau}^-_{n-m+1,n},\vs_{n-m+1,n})\,,
+p(\tau_{n+1}\,|\,\vs_{n-m+1,n})\,,
+\label{eq:tau_np1}
 \end{eqnarray}
 or more precisely
 \begin{eqnarray}
-p(\tau_{n+1}\!=\!\ut\,|\,\vec{\tau}^-_{n-m+1,n},\vs_{n-m+1,n}) & = & 
+p(\tau_{n+1}\!=\!\ut\,|\,\vs_{n-m+1,n}) & = & 
 \sum_{\tau=0}^{1}\delta(\tau\!=\!\ut)\,
-p(\tau_{n+1}\!=\!\tau\,|\,\vec{\tau}^-_{n-m+1,n},\vs_{n-m+1,n})\,,
+p(\tau_{n+1}\!=\!\tau\,|\,\vs_{n-m+1,n})\,,
 \end{eqnarray}
-is also well defined, since likewise  $p(\tau_{n+1}\!=\!*\,|\,\ldots)=\sum_{\tau=0}^{1} p(\tau_{n+1}\!=\!\tau\,|\,\ldots)=1$.
+is also well defined, since likewise 
+ $p(\tau_{n+1}\!=\!*\,|\,\vs_{n-m+1,n})=\sum_{\tau=0}^{1} p(\tau_{n+1}\!=\!\tau\,|\,\vs_{n-m+1,n})=1$.
 
 However, if the initiation marker $\iota_0$ is unobserved, i.e.\ $\ui=*$, then the marginalisation is more difficult
 because $\iota_0$ potentially conditions both $S_t$ and $X_t$, as shown by equation~\eqref{eq:partial-m-ell}. 
 To allow for this, note that
 \begin{eqnarray}
-p(\iota_0,\vec{\tau}^-_{1,m},\vs_{1,m}) & = & p(\iota_0)\prod_{t=1}^{m}p(\tm_t,s_t\,|\,\iota_0,\vec{\tau}^-_{1,t-1},\vs_{1,t-1})
-\end{eqnarray}
-and
-\begin{eqnarray}
-p(\iota_0,\vec{\tau}^-_{1,m},\vs_{1,m},\uvx_{1,\ell-1}) & = & 
-p(\iota_0,\vec{\tau}^-_{1,m},\vs_{1,m})
-\prod_{t=1}^{\ell-1}p(\ux_t\,|\,\iota_0,\vec{\tau}^-_{1,t},\vs_{1,t})
-\,,
-\end{eqnarray}
-since $\ell-1\le m$. Hence we may first compute the marginal probabilities
-\begin{eqnarray}
-p(\ui,\vec{\tau}^-_{1,m},\vs_{1,m},\uvx_{1,\ell-1}) & = &
+p(\ui,\vs_{1,m},\uvx_{1,\ell-1}) & = & 
 \sum_{\iota_0=0}^{1}\delta(\iota_0\!=\!\ui)\,
-p(\iota_0,\vec{\tau}^-_{1,m},\vs_{1,m},\uvx_{1,\ell-1})
+p(\iota_0)\left\{\prod_{t=1}^{m}p(\tm_t,s_t\,|\,\iota_0,\vs_{1,t-1})\right\}
+\left\{\prod_{t=1}^{\ell-1}p(\ux_t\,|\,\iota_0,\vs_{1,t})\right\}
+\,,
+\label{eq:p_i_s_m_x_lm1}
 \end{eqnarray}
-and then the joint probabilities
+since $\ell-1\le m$. Hence, the marginalised observation probability as a function of unknown states takes the form
 \begin{eqnarray}
-p(\ui,\vs,\uvx,\ut) & = &
-p(\ui,\vec{\tau}^-_{1,m},\vs_{1,m},\uvx_{1,\ell-1})
-\left\{\prod_{t=m+1}^{n}p(\tm_t,s_t\,|\,\vec{\tau}^-_{t-m,t-1},\vs_{t-m,t-1})\right\}
-\nonumber\\&&\times
-\left\{\prod_{t=\ell}^{n}p(\ux_t\,|\,\vec{\tau}^-_{t-\ell+1,t},\vs_{t-\ell+1,t})\right\}
-\,p(\ut\,|\,\vec{\tau}^-_{n-m+1,n},\vs_{n-m+1,n})
+\hspace*{-7mm}
+p(\ui,\vs,\uvx,\ut) & \!\!\!=\!\!\! &
+p(\ui,\vs_{1,m},\uvx_{1,\ell-1})
+\left\{\prod_{t=m+1}^{n}p(\tm_t,s_t\,|\,\vs_{t-m,t-1})\!\right\}
+\!\!
+\left\{\prod_{t=\ell}^{n}p(\ux_t\,|\,\vs_{t-\ell+1,t})\!\right\}
+\,\!p(\ut\,|\,\vs_{n-m+1,n})\,,
 \end{eqnarray}
-to finally arrive at the (hidden) state marginalisation
+such that the (hidden) state marginalisation becomes
 \begin{eqnarray}
 p(\ui,\uvs,\uvx,\ut) & = & 
 \sum_{s_1\in{\cal S}} \delta(s_1\!=\!\us_1)
@@ -1108,8 +1118,56 @@ Note that the conventional HMM formulation is obtained by dropping the $\ui$, $\
 
 \subsection{Stateful Forward--Backward Algorithm}\label{sec:forward-backward:stateful}
 
-Under the conventions discussed in the previous section for handling missing observations, the forward--backward algorithm for order--$(m,\ell)$ stateful Markov sequences takes the form
+Under the conventions discussed in the previous section for handling missing observations, the forward--backward algorithm for order--$(m,\ell)$ stateful Markov sequences now follows from the derivation of Section~\ref{sec:forward-backward-markov}.
+In particular, the forward pass commences with the analogue of factor~\eqref{eq:fwd-pass-m0}, namely
+\begin{eqnarray}
+\alpha_m(\vs_{1,m}) & = & p(\ui, \vs_{1,m}, \uvx_{1,m})
+~=~p(\ui,\vs_{1,m},\uvx_{1,\ell-1})
+\,\prod_{t=\ell}^{m}p(\ux_t\,|\,\vs_{t-\ell+1,t})\,,
+\end{eqnarray}
+utilising equation~\eqref{eq:p_i_s_m_x_lm1}. Note that the last factor vanishes in the special case that $\ell=m+1$.
+Next, the analogue of the recusive forward relation~\eqref{eq:fwd-pass-m-recursive} is
+\begin{eqnarray}
+\alpha_{t}(\vs_{t-m+1,t}) & = &
+ p(\ui, \uvs_{1,t-m},\vs_{t-m+1,t}, \uvx_{1,t})
+\nonumber\\& = &
+\sum_{s_{t-m}\in{\cal S}} \delta(s_{t-m}\!=\!\us_{t-m})\,\alpha_{t-1}(\vs_{t-m,t-1})
+\nonumber\\&&\times
+p(\tm_{t},s_{t}\,|\,\vs_{t-m,t-1})\,p(\ux_{t}\,|\,\vs_{t-\ell+1,t})\,,
+\label{blah}
+\end{eqnarray}
+for $t=m+1,\ldots,n$.
+Note that for the special case of $m=\ell=1$, the forward pass reduces to
+\begin{eqnarray}
+\!\!\!
+\alpha_1(s_1) & = &  \sum_{\iota_0=0}^{1}\delta(\iota_0\!=\!\ui)\,
+p(\iota_0)\,p(\tm_1,s_1\,|\,\iota_0)\,p(\ux_1\,|\,\tm_1,s_1)\,,
+\nonumber\\
+\!\!\!
+\alpha_{t}(s_{t}) & = &
+\!\!\!\sum_{s_{t-1}\in{\cal S}} \delta(s_{t-1}\!=\!\us_{t-1})\,\alpha_{t-1}(s_{t-1})
+\,p(\tm_{t},s_{t}\,|\,\tm_{t-1},s_{t-1})\,p(\ux_t\,|\,\tm_t,s_t)
+\,\mbox{ for $t=2,\ldots,n$}
+\,.
+\end{eqnarray}
 
+Similarly, the backward pass commences with the analogue of factor~\eqref{eq:bwd-m0},
+namely
+\begin{eqnarray}
+\beta_n(\vs_{n-m+1,n}) & = & p(\ut\,|\,\vs_{n-m+1,n})\,,
+\end{eqnarray}
+utilising equation~\eqref{eq:tau_np1}. Then the backward recursive relation is the analogue
+of equation~\eqref{eq:bwd-recurse}, namely
+\begin{eqnarray}
+\beta_{t}(\vs_{t-m+1,t}) & = & 
+ p(\uvs_{t+1,n},\uvx_{t+1,n},\ut\,|\,\vs_{t-m+1,t})
+\nonumber\\& = &
+\sum_{s_{t+1}\in{\cal S}} \delta(s_{t+1}\!=\!\us_{t+1})\,
+p(\tm_{t+1},s_{t+1}\,|\,\vs_{t-m+1,t})\,p(\ux_{t+1}\,|\,\vs_{t-\ell+2,t+1})\,\beta_{t+1}(\vs_{t-m+2,t+1})
+\,,
+\end{eqnarray}
+for $t=n-1,\ldots,m$.
+*** put back to t->t-1 ***
 *******************
 
 The observed sequence model~\eqref{eq:state-marg} can be efficiently evaluated by marginalising over the state of each stage
